--- a/css/src/about_us.scss
+++ b/css/src/about_us.scss
@@ -20,7 +20,7 @@
         font-size: 5em;
         color: $main_color;
         font-weight:400;
-        font-family: $native_font2;
+        font-family: $native_font;
         font-style: italic;
       }
     }
