--- a/css/src/landing.scss
+++ b/css/src/landing.scss
@@ -30,7 +30,7 @@
       text-transform: uppercase;
       color: $main_color;
       font-family: $native_font;
-      font-size:
+      font-size: 1.3em;
     }
   }
 
